k8s/shared/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: shared
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
